--- a/website/app/styles/main.css
+++ b/website/app/styles/main.css
@@ -6586,10 +6586,14 @@ footer {
   padding-left: 0px;
 }
 
-.col-md-8 .col-md-6 p {
+#nav {
+  margin: 20px;
+}
+
+.col-md-8 .col-md-12 p {
   padding-left: 0px;
 }
-.col-md-8 .col-md-6 h3 {
+.col-md-8 .col-md-12 h3 {
   margin-top: 0px;
   margin-left: 0px;
   padding-left: 10px;
@@ -6610,11 +6614,27 @@ footer {
 
 .selector {
   float: left;
-  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.list {
+  margin-top: 20px;
+  clear: both;
+}
+
+.searchBar {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.filterBar {
+  width: 70%;
+  height: 20px;
+  margin: 0 auto;
 }
 
 #search {
-  width: 300px;
+  width: 50%;
   margin-bottom: 10px;
 }
 
@@ -6639,7 +6659,7 @@ footer {
   padding-left: 5px;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 768px) {
   .card {
     width: 100%;
   }
