--- a/website/app/styles/main.scss
+++ b/website/app/styles/main.scss
@@ -97,60 +97,32 @@ footer {
     margin-bottom: 10px;
 }
 
-.selector {
-    float: left; 
-    margin-left: 20px;
+.selector select{
+    max-width: 100px;
 }
 
-.list {
-    margin-top: 20px;
-    clear: both;
+.selector label {
+    margin-right: 10px;
 }
+
 
 .searchBar {
-    margin: 0 auto;
+
     text-align: center;
+    margin-bottom: 20px;
+    input { 
+        width: 50%;
+    }
+
 }
 
 .filterBar {
-    width: 70%;
-    height: 20px;
-    margin: 0 auto;
-}
-#search {
-    width: 50%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-#content {
-
-    select {
-        width: 100px;
-    }
-}
-
-.list {
-    padding-top: 20px;
-}
 .card {
-    width: 45%;
-    height: 250px;
-    float:left;
-    margin:10px;
-    border: 1px solid black;
     padding: 6px;
-
-    ul {
-        list-style-type: none;
-        padding-left: 5px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-    .card {
-        width: 100%;
-    }
+    height: 250px;
 }
 
 /* Responsive: Portrait tablets and up */
