--- a/website/app/styles/main.scss
+++ b/website/app/styles/main.scss
@@ -1,7 +1,7 @@
 $icon-font-path: "/bower_components/bootstrap-sass/vendor/assets/fonts/bootstrap/";
 
 // bower:scss
-@import "bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
+@import "../bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
 
 .browsehappy {
